# newScada

./: .gitignore  README.md  START.md  docker-compose.yml
.claude/: settings.local.json
EDITOR/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ObsidianTZ/: .env.example  00 - Index.md  000 MOC - newScada.md  01 - Reja.md  02 - DB Sxema.md  03 - API Dizayn.md  04 - Editor.md  05 - Dispatcher.md  06 - IEC104 Config.md  07 - Schema Editor.md  08 - Feature List.md  EXPLAIN.md  REPORT.md  Requirements.md  docker-compose.yml
ObsidianTZ/.trash/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ObsidianTZ/.trash/backend/alembic/: env.py
ObsidianTZ/.trash/backend/alembic/versions/: 20260524_0001_uuidv7_schema.py
ObsidianTZ/.trash/backend/app/: __init__.py  main.py
ObsidianTZ/.trash/backend/app/api/: crud.py  dependencies.py  pagination.py  schemas.py
ObsidianTZ/.trash/backend/app/api/routers/: branches.py  devices.py  health.py  models.py  records.py  schemas.py  signals.py  substations.py
ObsidianTZ/.trash/backend/app/core/: __init__.py  errors.py  ids.py  logging.py  settings.py
ObsidianTZ/.trash/backend/app/infrastructure/db/: models.py  session.py
ObsidianTZ/.trash/backend/tests/: test_app.py
backend/: .env.example  alembic.ini  canon_signals.py  discover_ioa.py  fix_7shkaf_signals.py  fix_monitoring_signals.py  full_scan.py  import_catalog.py  import_yunusobod.py  main.py  requirements.txt  scan_result.txt  seed.py  start.bat  update_schema_only.py
frontend/: index.html  package-lock.json  (+3 more)
(+137 files in other folders)
